kubernetes/core/networking/nginx-int-ingress-system/services/vclusters/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: &app dev-cluster
  namespace: clusters
spec:
  ingressClassName: int-ingress
  rules:
  - host: dev-cluster.${LOCAL_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: *app
            port: 
              number: 443
        path: /
        pathType: ImplementationSpecific
